update object page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -130,3 +130,5 @@
 @import "./components/object/object-hero";
 @import "./components/object/object-contact";
 @import "./components/object/object-services";
+@import "./components/object/object-description";
+
