--- a/src/views/components/object/object-services.pug
+++ b/src/views/components/object/object-services.pug
@@ -6,44 +6,208 @@
         .object-services__block
           svg(width="24" height="24" viewBox="0 0 24 24")
             use(xlink:href="#svg-object-park")
-          .object-services__text
+          .object-services__content
             h3 Расстояние до парка
-            p Расположен на территории парка.
+            .object-services__description
+              .object-services__text
+                p Расположен на территории парка.
+        .object-services__block
+          svg(width="24" height="24" viewBox="0 0 24 24")
+            use(xlink:href="#svg-object-sauna")
+          .object-services__content
+            h3 Бани и сауны
+            .object-services__description
+              .object-services__text
+                p За дополнительную плату. Финская сауна. Время работы сауны: с 12:00 до 22:00 без перерыва и выходных (до 5 мест).
         .object-services__block
           svg(width="24" height="24" viewBox="0 0 24 24")
             use(xlink:href="#svg-object-parking")
-          .object-services__text
+          .object-services__content
             h3 Паркинг
-            p За дополнительную плату. Открытая, охраняемая.
+            .object-services__description
+              .object-services__text
+                p За дополнительную плату. Открытая, охраняемая.
+        .object-services__block.object-services__block--large
+          svg(width="24" height="24" viewBox="0 0 24 24")
+            use(xlink:href="#svg-object-spa")
+          .object-services__content
+            h3 Spa-процедуры
+            .object-services__description
+              .object-services__text
+                p В санатории функционирует Центр красоты и здоровья. Гости могут восстановить силы и побаловать себя СПА – процедурами и услугами аппаратной и инъекционной косметологии.
+              ul
+                li Омоложение кожи лица с помощью инъекций;
+                li Изменение форм лица без операций (заполнение носогубных складок, изменение форм губ, избавление от крупных и мелких морщин);
+                li Мезотерапия: лечение волос, уменьшение объема тела, лечение целлюлита;
+                li Очищение кожи лица: чистка механическая (ручная), ультразвуковая;
+                li Маски (питание, увлажнение, лифтинг);
+                li Омоложение кожи лица с помощью инъекций;
+                li Массаж лица: лимфодренажный, скульптурный;
+                li Аппаратная косметология;
+                li Химические пилинги; летние пилинги;
+                li Уменьшение объемов тела до 5 см.;
+                li Спа-капсула;
         .object-services__block
           svg(width="24" height="24" viewBox="0 0 24 24")
             use(xlink:href="#svg-object-wifi")
-          .object-services__text
+          .object-services__content
             h3 WI-FI, Интернет
-            p Входит в стоимость. Доступен на всей территории.
+            .object-services__description
+              .object-services__text
+                p Входит в стоимость. Доступен на всей территории.
         .object-services__block
           svg(width="24" height="24" viewBox="0 0 24 24")
             use(xlink:href="#svg-object-water")
-          .object-services__text
+          .object-services__content
             h3 Водоснабжение
-            p Холодная и горячая вода - круглосуточно.
+            .object-services__description
+              .object-services__text
+                p Холодная и горячая вода - круглосуточно.
         .object-services__block
           svg(width="24" height="24" viewBox="0 0 24 24")
             use(xlink:href="#svg-object-towel")
-          .object-services__text
+          .object-services__content
             h3 Смена полотенец
-            p 3 полотенца на человека в номере. Смена полотенец и уборка номеров - ежедневно. Смена постельного белья - раз в 3 дня.
+            .object-services__description
+              .object-services__text
+                p 3 полотенца на человека в номере. Смена полотенец и уборка номеров - ежедневно. Смена постельного белья - раз в 3 дня.
         .object-services__block
           svg(width="24" height="24" viewBox="0 0 24 24")
             use(xlink:href="#svg-object-buwet")
-          .object-services__text
+          .object-services__content
             h3 Расстояние до бювета
-            p На территории. 3 вида минеральной воды: Сочинская, Лазаревская, Пластунская.
+            .object-services__description
+              .object-services__text
+                p На территории. 3 вида минеральной воды: Сочинская, Лазаревская, Пластунская.
         .object-services__block
           svg(width="24" height="24" viewBox="0 0 24 24")
             use(xlink:href="#svg-object-buwet")
-          .object-services__text
+          .object-services__content
             h3 Животные
-            p Запрещено.
-          
-           
+            .object-services__description
+              .object-services__text
+                p Запрещено.
+
+      .object-services__blocks
+        .object-services__block
+          svg(width="24" height="24" viewBox="0 0 24 24")
+            use(xlink:href="#svg-object-food")
+          .object-services__content
+            h3 Питание
+            .object-services__description
+              .object-services__text
+                p 3-разовое питание по системе «шведский стол» (для номеров Стандарт) или «заказное меню» (для номеров Студия, Люкс), или 5-разовое диетическое питание (для лечебных программ Детокс, Мужское здоровье, Женское здоровье, СПА, Идеальная линия).
+                p Залы питания по системе <span>«шведский стол»</span>: Коралловый, Серебряный, Золотой, Зеленый, 3 и 4 корпус.
+                p Залы питания по системе <span>«заказное меню»</span> (A La Carte): Юбилейный, Веранда, Каминный, Океания, 4 корпус.
+        .object-services__block
+          .object-services__content
+            .object-services__description.object-services__description--gap
+              .object-services__text
+                p Зал, где организовано <span>5-разовое диетическое</span> питание: Каминный, 4 корпус.
+              h4 Режим работы столовой:
+              ul
+                li Завтрак с 07:00 до 10:00;
+                li Обед с 12:00 до 15:00;
+                li Ужин с 17:00 до 19:30.
+      
+      .object-services__blocks
+        .object-services__block
+          svg(width="24" height="24" viewBox="0 0 24 24")
+            use(xlink:href="#svg-object-child")
+          .object-services__content
+            h3 Дети
+            .object-services__description
+              .object-services__text
+                p Принимаются с любого возраста. <br> Дети принимаются бесплатно (без предоставления места и питания) до 4 лет.
+        .object-services__block.object-services__block--small
+          svg(width="24" height="24" viewBox="0 0 24 24")
+            use(xlink:href="#svg-object-toy")
+          .object-services__content
+            h3 Детская комната
+            .object-services__description
+              .object-services__text
+                p Входит в стоимость (по решению администрации). С воспитателем. Для детей 4-14 лет. Дети до 4 лет принимаются только в сопровождении родителей. График работы детского клуба «Знаюшка»: с 08:00 до 20:00, перерыв с 13:00 до 14:00, ежедневно. Последнее воскресенье месяца - санитарный день. Единоразовое посещение - 45 минут. Предварительная запись обязательна.
+        .object-services__block.object-services__block--medium
+          svg(width="24" height="24" viewBox="0 0 24 24")
+            use(xlink:href="#svg-object-ball")
+          .object-services__content
+            h3 Для детей
+            .object-services__description
+              ul
+                li Детский бассейн с морской водой;
+                li Детские праздники и мастер-классы;
+                li Океанариум Sochi Discovery World Aquarium;
+                li Детская площадка;
+                li Открытый детский бассейн с горкой.
+        .object-services__block
+          svg(width="24" height="24" viewBox="0 0 24 24")
+            use(xlink:href="#svg-object-chair")
+          .object-services__content
+            h3 Наличие детских стульчиков
+            .object-services__description
+              .object-services__text
+                p Входят в стоимость.
+      
+      
+      .object-services-line
+        .object-services-line__images
+          .object-services-line__image.active(data-src="/assets/images/object/1.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/2.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/3.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/4.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/5.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/6.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+        .object-services-line__content
+          h3.object-services-line__title Крытый бассейн
+          .object-services-line__text Входит в стоимость. С морской водой, подогреваемый, площадью - 3000 кв. м., глубиной - 1,45 м. Для самых маленьких гостей есть детская плескательница, глубиной 0,6 м., детский плавательный бассейн глубиной 0,9 м. Для комфортного отдыха на территории бассейна расположены душевые, санузел, медпункт, кафе, деревянные лежаки и теневые навесы. Дети до 3-х лет допускаются только в аквапамперсе...
+          button.object-services-line__button(type="button") Развернуть описание
+      
+      .object-services-line
+        .object-services-line__images
+          .object-services-line__image.active(data-src="/assets/images/object/1.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/2.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/3.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/4.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/5.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/6.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+        .object-services-line__content
+          h3.object-services-line__title Открытый бассейн
+          .object-services-line__text Входит в стоимость. С подогреваемой, морской водой, оборудован, размером 20*15 метров. Время посещения: с 9:00 до 20:00. Четверг - санитарный день. Работает с 1 мая по 30 сентября. В зависимости от погодных условий период работы бассейна может меняться.
+          button.object-services-line__button(type="button") Развернуть описание
+      
+      .object-services-line
+        .object-services-line__images
+          .object-services-line__image.active(data-src="/assets/images/object/1.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/2.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/3.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/4.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/5.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+          .object-services-line__image(data-src="/assets/images/object/6.png")
+            img(src="/assets/images/object/1.png" alt="" loading="lazy")
+        .object-services-line__content
+          h3.object-services-line__title Конференц-зал
+          .object-services-line__text 
+            p За дополнительную плату, по предварительному согласованию.
+            p <span>Киноконцертный зал «Коралл»</span> идеально подходит для проведения: крупномасштабных форумов, конференций, семинаров, фестивалей, концертов и спектаклей, кинопоказов. В холле киноконцертного зала возможно размещение выставочных стендов, буфета и т.д. Вместимость до 255 мест: комфортабельные мягкие кресла, современное осветительное, аудио и кинооборудование.
+            p <span>Конференц-зал в корпусе «Коралл»</span> прекрасно подойдет для проведения деловых встреч, семинаров, презентаций, переговоров. Интерьер зала выполнен в традиционном, классическом стиле. Вместимость от 80 до 100 мест: круговой стол с микрофонами, кресла с мягкой обшивкой, кафедра для докладчика, мультимедийное конференц-оборудование, система кондиционирования.
+            p <span>Малый конференц-зал в корпусе «Коралл»</span> подходит для деловых встреч, семинаров, мастер-классов, презентаций, переговоров. Зал предполагает несколько вариантов рассадки и возможность оснащение флипчартом и мультимедийным оборудованием. Вместимость от 25 до 30 мест: круглый стол и стулья с мягкой обивкой, система кондиционирования, выход на балкон.
+            p <span>Летний киноконцертный зал «Отдых»</span> выполнен в форме открытого амфитеатра. Расположен под открытым небом, среди хвойных и эвкалиптовых деревьев. Технические возможности и вместимость зала позволяют проводить фестивали, концерты и другие масштабные мероприятия. Вместимость – 800 посадочных мест.
+          button.object-services-line__button(type="button") Развернуть описание
+
