--- a/src/views/pages/object.pug
+++ b/src/views/pages/object.pug
@@ -28,4 +28,5 @@ block content
         include ../components/object/object-conditions
         include ../components/object/object-card
         include ../components/object/object-contact
-        include ../components/object/object-services
+        .object-description
+          include ../components/object/object-services
