--- a/src/assets/styles/components/object/object.scss
+++ b/src/assets/styles/components/object/object.scss
@@ -46,4 +46,19 @@
       justify-content: center;
     }
   }
+
+  &__descriptions {
+    display: flex;
+    flex-direction: column;
+    gap: 70px;
+    padding-top: 70px;
+    padding-bottom: 80px;
+  }
+
+  &__dropdowns {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
 }
