update object page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -132,5 +132,7 @@
 @import "./components/object/object-description";
 @import "./components/object/object-dropdown";
 @import "./components/object/object-rating";
+@import "./components/object/object-reviews";
+@import "./components/object/object-location";
 
 
