--- a/src/views/pages/object.pug
+++ b/src/views/pages/object.pug
@@ -45,3 +45,8 @@ block content
             .object-description__wrapper
               h2.object-description__title 76 отзывов <span>о санатории «Знание»</span>
                 include ../components/object/object-rating
+                include ../components/object/object-reviews
+          .object-description
+            .object-description__wrapper
+              h2.object-description__title Расположение <span>санатория «Знание»</span>
+                include ../components/object/object-location
