--- a/src/views/components/object/object-card.pug
+++ b/src/views/components/object/object-card.pug
@@ -29,10 +29,10 @@
                 use(xlink:href="#svg-object-building")
               span Корпус:
           .object-card__item  №1, №3, №4, №5
-            .search-sidebar__help.search-sidebar__help--stations
+            .object-card__help.object-card__help--stations
               svg(width="16" height="16" viewBox="0 0 16 16")
                 use(xlink:href="#svg-search-help")
-              .search-sidebar__hint
+              .object-card__hint
                 p Выберите одну или несколько станций и укажите
           .object-card__item
             .object-card__name
