--- a/src/views/components/object/object-description.pug
+++ b/src/views/components/object/object-description.pug
@@ -1,6 +1,6 @@
 .object-description
   .object-description__wrapper
-    h2.object-description__title Удобства и услуги <span>в санатории «Знание»</span>
+    h2.object__title Удобства и услуги <span>в санатории «Знание»</span>
     .object-description__container
       .object-description__blocks
         .object-description__block
