--- a/src/views/components/object/object-gallery.pug
+++ b/src/views/components/object/object-gallery.pug
@@ -2,11 +2,11 @@
   .wrapper
     .object-gallery__wrapper
       .object-gallery__buttons
-        button.object-gallery__button.object-gallery__images(type="button")
+        button.object-gallery__button(type="button")
           svg(width="24" height="24" viewBox="0 0 24 24")
             use(xlink:href="#svg-object-youtube")
           p Смотреть видео
-        button.object-gallery__button.object-gallery__images(type="button")
+        button.object-gallery__button(type="button")
           p Смотреть все фото
           span 36
       .swiper.object-gallery__slider
