--- a/src/views/components/object/object-hero.pug
+++ b/src/views/components/object/object-hero.pug
@@ -13,8 +13,13 @@
   )
   .wrapper
     .object-hero__wrapper
+      h1.object-hero__title Санаторий «Знание»
       .object-hero__left
-        h1.object-hero__title Санаторий «Знание»
+        .object-hero__block
+          .object-hero__rating 4.9
+          .object-hero__review
+            a.object__link.object__link--small(href="#")
+              span Читать 202 отзыва
         .object-hero__adress
           svg(width="11" height="13" viewBox="0 0 11 13")
             use(xlink:href="#svg-location")
