--- a/src/views/components/object/object-information.pug
+++ b/src/views/components/object/object-information.pug
@@ -1,43 +1,50 @@
 .object-information
   .object-information__container
-    .object-information__items
+    .object-information__items.object-information__items--large.object-information__items--list
       .object-information__item
         svg(width="18" height="18" viewBox="0 0 18 18")
           use(xlink:href="#svg-swimming-pool")
-        a(href="#") Открытый бассейн
-      .object-information__item
-        svg(width="18" height="18" viewBox="0 0 18 18")
-          use(xlink:href="#svg-spa")
-        a(href="#") SPA
+        .object-information__block
+          span Открытый бассейн
       .object-information__item
         svg(width="18" height="18" viewBox="0 0 18 18")
           use(xlink:href="#svg-kpool")
-        a(href="#") Крытый бассейн
-      .object-information__item
-        svg(width="18" height="18" viewBox="0 0 18 18")
-          use(xlink:href="#svg-wifi")
-        span WI-FI, Интернет
+        .object-information__block
+          span Крытый бассейн
       .object-information__item
         svg(width="18" height="18" viewBox="0 0 18 18")
           use(xlink:href="#svg-conference")
-        a(href="#") Конференц-зал
+        .object-information__block
+          span Конференц-зал
       .object-information__item
-        svg(width="20" height="20" viewBox="0 0 20 20")
-          use(xlink:href="#svg-parking")
-        span Есть парковка
-      .object-information__item.object-information__item--large
         svg(width="18" height="18" viewBox="0 0 18 18")
-          use(xlink:href="#svg-sea")
-        span Расстояние до пляжа: 100 метров от корпуса №1, 30 метров - от корпуса №2, 300 метров от корпуса №4, 200 метров от корпуса №3, 120 метров от корпуса №5, 50-70 метров от вилл.
+          use(xlink:href="#svg-wifi")
+        .object-information__block
+          span WI-FI, Интернет
+      .object-information__item
+        svg(width="18" height="18" viewBox="0 0 18 18")
+          use(xlink:href="#svg-spa")
+        .object-information__block
+          span SPA
       .object-information__item
         svg(width="20" height="20" viewBox="0 0 20 20")
           use(xlink:href="#svg-invalid")
-        span Размещение маломобильных групп населения
+        .object-information__block
+          span Доступно для маломобильных групп населения
+      .object-information__item
+        svg(width="20" height="20" viewBox="0 0 20 20")
+          use(xlink:href="#svg-parking")
+        .object-information__block
+          span Есть парковка
+      
+      .object-information__item.object-information__item--large
+        svg(width="18" height="18" viewBox="0 0 18 18")
+          use(xlink:href="#svg-sea")
+        .object-information__block
+          span Расстояние до пляжа: 100 метров от корпуса №1, 30 метров - от корпуса №2, 300 метров от корпуса №4, 200 метров от корпуса №3, 120 метров от корпуса №5, 50-70 метров от вилл.
     .object-information__buttons
-      a.object__link.object__link--blue(href="#")
+      a.object__link.object__link--blue.object__link--tiny(href="#")
         span Все удобства и услуги
-      a.object__link.object__link--blue(href="#")
-        span Инфраструктура
   .object-information__container
     .object-information__items
       .object-information__description
@@ -55,11 +62,10 @@
         h4.object-information__title Минимальный возраст лечения детей
         p.object-information__text 4 года, Программа Detox / СПА / Идеальная линия / Мужское здоровье - с 16 лет
     .object-information__buttons
-      a.object__link.object__link--blue(href="#")
+      a.object__link.object__link--blue.object__link--tiny(href="#")
         span Что есть для детей?
   .object-information__container
     .object-information__items
       .object-information__description.object-information__description--large
         h4.object-information__title Минимальный срок путевки
         p.object-information__text Без лечения - от 3 ночей, с лечением - от 7 ночей, Путешествие в лето (с лечением) - от 7 ночей, Путешествие в лето (без лечения) - от 2 ночей. Программы Детокс, Спа - от 7 ночей. Мужское здоровье, Идеальная линия - 14 ночей.
-    
