--- a/src/views/components/object/object-sidebar.pug
+++ b/src/views/components/object/object-sidebar.pug
@@ -1,52 +1,69 @@
 aside.object-sidebar
   .object-sidebar__wrapper
-    .object-sidebar__block.object-sidebar__block--small
-      .object-sidebar__rating 4.9
-      .object-sidebar__review
-        .object-sidebar__stars
-          svg(width="30" height="30" viewBox="0 0 30 30")
-            use(xlink:href="#svg-star")
-          svg(width="30" height="30" viewBox="0 0 30 30")
-            use(xlink:href="#svg-star")
-          svg(width="30" height="30" viewBox="0 0 30 30")
-            use(xlink:href="#svg-star")
-          svg(width="30" height="30" viewBox="0 0 30 30")
-            use(xlink:href="#svg-star")
-          svg(width="30" height="30" viewBox="0 0 30 30")
-            use(xlink:href="#svg-star")
-        a.object__link.object__link--small(href="#")
-          span Читать 202 отзыва
-    .object-sidebar__block
-      h3.object-sidebar__title Основные профили лечения
-      ul.object-sidebar__list
-        li
-          svg(width="20" height="20" viewBox="0 0 20 20")
-            use(xlink:href="#svg-object-approve") 
-          span ЛОР органы
-        li 
-          svg(width="20" height="20" viewBox="0 0 20 20")
-            use(xlink:href="#svg-object-approve") 
-          span Сердечно-сосудистая система
-        li 
-          svg(width="20" height="20" viewBox="0 0 20 20")
-            use(xlink:href="#svg-object-approve")
-          span Нервная система
-        li 
-          svg(width="20" height="20" viewBox="0 0 20 20")
-            use(xlink:href="#svg-object-approve")
-          span Опорно-двигательный аппарат
-        li 
-          svg(width="20" height="20" viewBox="0 0 20 20")
-            use(xlink:href="#svg-object-approve")
-          span Органы дыхания
-        li
-          svg(width="20" height="20" viewBox="0 0 20 20")
-            use(xlink:href="#svg-object-approve")
-          span Covid-19
-      a.object__link.object__link--blue(href="#")
-        span Подробнее о лечении
+    .object-sidebar__banner
+      img(src="/assets/images/object/7.png" alt="" loading="lazy")
+      .object-sidebar__content
+        .object-sidebar__status Акция
+        .object-sidebar__description Путешествие в лето! - ранее бронирование 2024
+    .object-sidebar__blocks
+      .object-sidebar__block
+        h3.object-sidebar__title Основные профили лечения
+        ul.object-sidebar__list
+          li
+            svg(width="20" height="20" viewBox="0 0 20 20")
+              use(xlink:href="#svg-object-approve") 
+            span ЛОР органы
+          li 
+            svg(width="20" height="20" viewBox="0 0 20 20")
+              use(xlink:href="#svg-object-approve") 
+            span Сердечно-сосудистая система
+          li 
+            svg(width="20" height="20" viewBox="0 0 20 20")
+              use(xlink:href="#svg-object-approve")
+            span Нервная система
+          li 
+            svg(width="20" height="20" viewBox="0 0 20 20")
+              use(xlink:href="#svg-object-approve")
+            span Опорно-двигательный аппарат
+          li 
+            svg(width="20" height="20" viewBox="0 0 20 20")
+              use(xlink:href="#svg-object-approve")
+            span Органы дыхания
+          li
+            svg(width="20" height="20" viewBox="0 0 20 20")
+              use(xlink:href="#svg-object-approve")
+            span Covid-19
+      .object-sidebar__block
+        h3.object-sidebar__title Основные профили лечения
+        ul.object-sidebar__list
+          li
+            svg(width="20" height="20" viewBox="0 0 20 20")
+              use(xlink:href="#svg-object-approve") 
+            span ЛОР органы
+          li 
+            svg(width="20" height="20" viewBox="0 0 20 20")
+              use(xlink:href="#svg-object-approve") 
+            span Сердечно-сосудистая система
+          li 
+            svg(width="20" height="20" viewBox="0 0 20 20")
+              use(xlink:href="#svg-object-approve")
+            span Нервная система
+          li 
+            svg(width="20" height="20" viewBox="0 0 20 20")
+              use(xlink:href="#svg-object-approve")
+            span Опорно-двигательный аппарат
+          li 
+            svg(width="20" height="20" viewBox="0 0 20 20")
+              use(xlink:href="#svg-object-approve")
+            span Органы дыхания
+          li
+            svg(width="20" height="20" viewBox="0 0 20 20")
+              use(xlink:href="#svg-object-approve")
+            span Covid-19
+        a.object__link.object__link--blue(href="#")
+          span Подробнее о лечении
 
-    .object-sidebar__block
+    .object-sidebar__blocks
       h3.object-sidebar__title Документы для заселения
       p.object-sidebar__text <span>Внимательно</span> изучите список документов, которые Вам потребуются для проживания
       a.object__link(href="#")
