--- a/src/assets/styles/components/object/object-hero.scss
+++ b/src/assets/styles/components/object/object-hero.scss
@@ -63,6 +63,13 @@
     }
   }
 
+  &__left {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    margin-top: 22px;
+  }
+
   &__title {
     font-size: 30px;
     font-weight: 800;
@@ -72,7 +79,6 @@
   }
 
   &__adress {
-    margin-top: 22px;
     display: flex;
     align-items: center;
     gap: 6px;
@@ -103,30 +109,55 @@
 
   &__links {
     margin-top: 30px;
-    padding: 16px 0 20px;
+    padding-top: 18px;
     border-top: 1px solid rgba($blue-700, 0.15);
     display: flex;
     justify-content: space-between;
   }
 
   &__link {
+    padding-bottom: 18px;
     font-size: 16px;
     font-weight: 600;
     line-height: 20px;
-    color: rgba($black-300, 0.75);
-    border-bottom: 1px dashed transparent;
-    @include min-screen(laptop) {
-      transition: border-color $transition-default;
-    }
+    color: $black-400;
+    cursor: default;
+    border-bottom: 2px solid transparent;
+    transition: color $transition-default;
     &.active {
-      color: $black-400;
+      color: $orange-500;
+      border-color: $orange-500;
     }
     &:not(.active) {
+      cursor: pointer;
       @include min-screen(laptop) {
         &:hover {
-          border-color: rgba($blue-500, 0.5);
+          color: $orange-500;
         }
       }
     }
+  }
+
+  &__block {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  &__rating {
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 18px;
+    text-align: center;
+    color: $white;
+    padding: 5px 6px;
+    background-color: $green-100;
+    border-radius: 4px;
+  }
+
+  &__review {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
   }
 }
