--- a/src/assets/styles/components/object/object-information.scss
+++ b/src/assets/styles/components/object/object-information.scss
@@ -7,6 +7,16 @@
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     row-gap: 16px;
+    &--large {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+    &--list {
+      display: inline-flex;
+      flex-wrap: wrap;
+      column-gap: 30px;
+      row-gap: 20px;
+      flex-direction: row;
+    }
   }
 
   &__container {
@@ -23,30 +33,6 @@
   &__item {
     display: flex;
     gap: 12px;
-    span {
-      margin-top: 3px;
-    }
-    span,
-    a {
-      font-size: 16px;
-      font-weight: 500;
-      line-height: 16px;
-      color: $black-300;
-    }
-    a {
-      border-bottom: 1px dashed rgba($black-300, 0.5);
-      &:active {
-        border-color: transparent;
-        color: $orange-500;
-      }
-      @include min-screen(laptop) {
-        transition: border-color $transition-default, color $transition-default;
-        &:hover {
-          border-color: transparent;
-          color: $orange-500;
-        }
-      }
-    }
     svg {
       stroke: transparent;
       width: 20px;
@@ -56,18 +42,57 @@
     &--large {
       grid-column: span 2;
     }
+    &--gap {
+      gap: 16px;
+    }
   }
 
   &__buttons {
     margin-top: 40px;
-    display: flex;
-    gap: 20px;
+    // display: flex;
+    // gap: 20px;
   }
 
   .object__link {
     margin-top: 0;
-    &--blue {
-      width: auto;
+  }
+
+  &__block {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    a {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 20px;
+      color: $blue-500;
+      @include min-screen(laptop) {
+        transition: color $transition-default;
+        &:hover {
+          color: $orange-500;
+        }
+      }
+    }
+    span {
+      margin-top: 3px;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 20px;
+      color: $black-300;
+    }
+    p {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 20px;
+      color: $black-300;
+    }
+
+    &--bold {
+      span {
+        margin-top: 0;
+        font-weight: 700;
+        color: $black-400;
+      }
     }
   }
 
