--- a/src/views/pages/object.pug
+++ b/src/views/pages/object.pug
@@ -19,8 +19,13 @@ block content
       .wrapper
         .object__wrapper
           .object__blocks
-            include ../components/object/object-information
-            include ../components/object/object-transfer
+            .object__block
+              include ../components/object/object-information
+            .object__block
+              h2.object__title Лечение <span>в санатории «Знание»</span>
+              include ../components/object/object-information-two
+            .object__block
+              include ../components/object/object-transfer
           .object__sidebar
             include ../components/object/object-sidebar
         
@@ -33,7 +38,7 @@ block content
           include ../components/object/object-description-two
           .object-description
             .object-description__wrapper
-              h2.object-description__title Лечебные программы <span>в санатории «Знание»</span>
+              h2.object__title Лечебные программы <span>в санатории «Знание»</span>
             .object__dropdowns
               include ../components/object/object-dropdown
               include ../components/object/object-dropdown
@@ -43,10 +48,10 @@ block content
           include ../components/object/object-description-three
           .object-description
             .object-description__wrapper
-              h2.object-description__title 76 отзывов <span>о санатории «Знание»</span>
+              h2.object__title 76 отзывов <span>о санатории «Знание»</span>
                 include ../components/object/object-rating
                 include ../components/object/object-reviews
           .object-description
             .object-description__wrapper
-              h2.object-description__title Расположение <span>санатория «Знание»</span>
+              h2.object__title Расположение <span>санатория «Знание»</span>
                 include ../components/object/object-location
